--- a/src/main/webapp/scripts/app/application/identity/identity.html
+++ b/src/main/webapp/scripts/app/application/identity/identity.html
@@ -99,7 +99,7 @@
 				    <div class="form-group">
 					    <label translate="identity.form.passport"></label>
 						<tooltip tooltip-text="identity.form.passport.tooltip"></tooltip>
-					    <file-upload ng-model="identity.documents" doc-type="passport" translate-key="identity.form.passport.placeholder"></file-upload>
+					    <file-upload ng-model="identity.documents" doc-type="passport" placeholder-key="identity.form.passport.placeholder"></file-upload>
 					</div>
 					<div class="form-group">
 					    <label translate="identity.form.birthAct"></label>
