--- a/src/main/webapp/scripts/app/agent/validation/validation.html
+++ b/src/main/webapp/scripts/app/agent/validation/validation.html
@@ -15,7 +15,8 @@
 			</div>
 		</div>
 		<div class="col-xs-6 validation-form">
-			<img src="assets/images/checkbox_checked.png">
+			<i class="fa fa-check-circle"></i>
+			<span style="margin-left: 10px"></span>
 			<span translate="validation.form.validate" translate-values="{validationDate: '{{getFormattedDate(identity.validationOn)}}', validationAuthor: 'Ambassade de France à Séoul'}">validate</span>
 		</div>
 	</div>
@@ -38,7 +39,8 @@
 				</div>
 			</div>
 			<div class="col-xs-6 validation-form">
-				<img src="assets/images/checkbox_checked.png">
+				<i class="fa fa-check-circle"></i>
+				<span style="margin-left: 10px"></span>
 				<span translate="validation.form.validate" translate-values="{validationDate: '{{getFormattedDate(identity.familyValidateOn)}}', validationAuthor: 'Administration des étrangers en France'}">validate</span>
 			</div>
 		</div>
@@ -60,7 +62,8 @@
 			</div>
 		</div>
 		<div class="col-xs-6 validation-form">
-			<img src="assets/images/checkbox_checked.png">
+			<i class="fa fa-check-circle"></i>
+			<span style="margin-left: 10px"></span>
 			<span translate="validation.form.validate" translate-values="{validationDate: '{{getFormattedDate(application.recevabilityDate)}}', validationAuthor: 'Police / Gendarmerie'}">validate</span>
 		</div>
 	</div>
@@ -74,11 +77,17 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-6 validation-form">
-			<img class="hand" src="assets/images/checkbox_unchecked.png" ng-show="!panel.project.valid" ng-click="panel.project.valid = !panel.project.valid; panel.project.open = false;">
-			<img class="hand" src="assets/images/checkbox_checked.png" ng-show="panel.project.valid" ng-click="panel.project.valid = !panel.project.valid">
-			<span translate="validation.form.toValidate" ng-show="!panel.project.valid">To validate</span>
+		<div class="col-xs-6 validation-form" ng-if="previousValidation">
+			<i class="fa fa-check-circle"></i>
+			<span style="margin-left: 10px"></span>
 			<span translate="validation.form.validate" translate-values="{validationDate: '{{getFormattedDate(project.validateOn)}}', validationAuthor: 'Administration des étrangers en France'}" ng-show="panel.project.valid">validate</span>
+		</div>
+		<div class="col-xs-6 validation-form" ng-if="!previousValidation">
+			<i class="fa hand" ng-class="{'fa-check-circle-o': panel.project.valid !== true, 'fa-check-circle': panel.project.valid === true, 'inactive': panel.project.valid === false}" 
+							   ng-click="panel.project.valid === true ? panel.project.valid = null : panel.project.valid = true; panel.project.open = false;"></i>
+			<span style="margin-left: 10px"></span>
+			<i class="fa hand" ng-class="{'fa-times-circle-o': panel.project.valid !== false, 'fa-times-circle': panel.project.valid === false, 'inactive': panel.project.valid === true}" 
+							   ng-click="panel.project.valid === false ? panel.project.valid = null :  panel.project.valid = false;"></i>
 		</div>
 	</div>
 	<div class="row" ng-if="panel.project.open">
