correction bug radio button reconstitution etat civil

--- a/src/main/webapp/scripts/app/agent/reconstruction/reconstruction.html
+++ b/src/main/webapp/scripts/app/agent/reconstruction/reconstruction.html
@@ -34,7 +34,7 @@
 				<td><input type="text" class="form-control" ng-model="collectedIdentity.firstName" readonly="readonly"></td>
 				<td><input type="radio" name="finalFirstName" ng-model="finalFirstName" ng-value="collectedIdentity.firstName"></td>
 				<td><input type="text" class="form-control" ng-model="proposedIdentity.firstName" readonly="readonly"></td>
-				<td><input type="radio" name="finalFirstName" ng-model="change" ng-value="proposedIdentity.firstName"></td>
+				<td><input type="radio" name="finalFirstName" ng-model="finalFirstName" ng-value="proposedIdentity.firstName"></td>
 			</tr>
 			<tr>
 				<td class="reconstructionTableFieldTitle" translate="identity.form.sex"></td>
