--- a/src/main/webapp/scripts/app/application/identity/identity.html
+++ b/src/main/webapp/scripts/app/application/identity/identity.html
@@ -83,7 +83,7 @@
 			    </div>
 			</div>
 		</div>
-		<div ng-if="needDocuments">
+		<div ng-if="documentsToDisplay.length > 0">
 			<br>
 			<div class="row">
 				<div class="col-xs-1 col-xs-offset-1">
