gestion données historique au démarrage (en local et de manière artisanale...)

--- a/src/main/webapp/scripts/app/application/rdv/rdv.html
+++ b/src/main/webapp/scripts/app/application/rdv/rdv.html
@@ -66,8 +66,8 @@
 		<div class="row row-center" ng-if="isRdvInFrance">
 			<div class="col-xs-6 col-sm-4 col-sm-offset-1 col-md-3 col-md-offset-2" style="text-align: left;">
 				<dfn>
-					<p><strong>Préfecture de Bobigny</strong></p>
-					<p>Service des étrangers</p>
+					<p><strong>Préfecture de Seine-Saint-Denis</strong></p>
+					<p>Bureau des naturalisations</p>
 					<br>
 					<p>1 Esplanade Jean Moulin</p>
 					<p>93007 Bobigny</p>
