--- a/src/main/webapp/scripts/app/agent/validation/validation.html
+++ b/src/main/webapp/scripts/app/agent/validation/validation.html
@@ -119,7 +119,7 @@
 			<div>
 				<ul>
 					<li ng-repeat="app in history">
-						<a href="#" translate="validation.form.history.list" translate-values="{startDate: '{{app.startDate}}', endDate: '{{app.endDate}}'}">validate</a>
+						<a href="#" translate="validation.form.history.list.{{app.nature}}" translate-values="{startDate: '{{app.startDate}}', endDate: '{{app.endDate}}'}">validate</a>
 					</li>
 				</ul>
 			</div>
