--- a/src/main/webapp/scripts/app/application/address/address-view.html
+++ b/src/main/webapp/scripts/app/application/address/address-view.html
@@ -2,18 +2,13 @@
 	<div class="col-sm-5">
 		<ng-include src="'scripts/app/application/address/address-light-view.html'"></ng-include>
         <div class="form-group">
-            <label translate="address.form.phone">Phone</label>
-            <input type="text" class="form-control" ng-model="address.phone" readonly="readonly">
+            <label translate="address.form.phone">Phone</label> : <span>{{::address.phone}}</span>
         </div>
         <div class="form-group" ng-if="!isAgent">
-            <label translate="address.form.email">Email</label>
-            <input type="text" class="form-control" ng-model="address.email" readonly="readonly">
+            <label translate="address.form.email">Email</label> : <span>{{::address.email}}</span>
         </div>
         <div class="form-group" ng-if="!isAgent">
-            <label translate="address.form.contactType">ContactType</label>
-            <div class="checkbox" ng-repeat="contactType in ['email', 'sms', 'postal']">
-		        <label><input type="checkbox" value="{{contactType}}" ng-checked="address.contactType.indexOf(contactType) != -1" disabled>{{'sejourApp.ContactType.'+contactType | translate}}</label>
-			</div>
+            <label translate="address.form.contactType">ContactType</label> : <span ng-repeat-start="contactType in address.contactType">{{::'sejourApp.ContactType.' + contactType | translate}}</span><span ng-if="$index < address.contactType.length - 1" ng-repeat-end>, </span>
         </div>
 	</div>
 </div>
