suppression de la double instruction pour la naturalisation

--- a/src/main/webapp/scripts/app/application/rdv/rdv.html
+++ b/src/main/webapp/scripts/app/application/rdv/rdv.html
@@ -49,7 +49,7 @@
 		<br>
 		<br>
 		<div class="row row-center" ng-if="!isRdvInFrance">
-			<div class="col-xs-6 col-sm-4 col-sm-offset-1 col-md-3 col-md-offset-2" style="text-align: left;">
+			<div class="col-xs-6 col-sm-4 col-sm-offset-1" style="text-align: left; padding: 20px 0px 0px 35px;">
 				<dfn>
 					<p><strong>Ambassade de France à Séoul</strong></p>
 					<br>
@@ -64,7 +64,7 @@
 			</div>
 		</div>
 		<div class="row row-center" ng-if="isRdvInFrance">
-			<div class="col-xs-6 col-sm-4 col-sm-offset-1 col-md-3 col-md-offset-2" style="text-align: left;">
+			<div class="col-xs-6 col-sm-4 col-sm-offset-1" style="text-align: left; padding: 20px 0px 0px 35px;">
 				<dfn>
 					<p><strong>Préfecture de Seine-Saint-Denis</strong></p>
 					<p>Bureau des naturalisations</p>
