--- a/src/main/webapp/scripts/app/application/address/address.html
+++ b/src/main/webapp/scripts/app/application/address/address.html
@@ -19,7 +19,7 @@
 		    </div>
 		</div>
 		<br>
-	    <div class="row">
+	    <div class="row" ng-if="nature !== 'naturalisation'">
 			<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
 		        
 		        <address-form-light ng-model="address" with-tooltip="true"></address-form-light>
@@ -59,6 +59,33 @@
 		            </div>
 		        </div>
 		    </div>
+		</div>
+		<div class="row" ng-if="nature === 'naturalisation'">
+			<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-5">
+				<ng-include src="'scripts/app/application/address/address-light-view.html'"></ng-include>
+			    <div class="form-group">
+			        <label translate="address.form.phone">Phone</label> : <span>{{::address.phone}}</span>
+			    </div>
+			    <div class="form-group" ng-if="!isAgent">
+			        <label translate="address.form.email">Email</label> : <span>{{::address.email}}</span>
+			    </div>
+				<div class="form-group">
+		            <label translate="address.form.contactType" for="field_contactType">ContactType</label>
+		            <tooltip tooltip-text='address.form.contactType.tooltip'></tooltip>
+			        <div class="checkbox" ng-repeat="contactType in contactTypeValues">
+				        <label><input type="checkbox" id="field_contactType_{{contactType.value}}" name="contactType_{{contactType.value}}" 
+				        				ng-model="contactType.checked" 
+				        				value="{{contactType.value}}" 
+				        				ng-click="updateContactType(contactType)"  
+				        				ng-required="address.contactType.length==0">{{'sejourApp.ContactType.'+contactType.value | translate}}</label>
+					</div>
+		            <div ng-show="addressForm.contactType.$dirty && addressForm.contactType.$invalid">
+		                <p class="help-block" ng-show="addressForm.contactType.$error.required" translate="entity.validation.required">
+		                    This field is required.
+		                </p>
+		            </div>
+		        </div>
+			</div>
 		</div>
 		<br>
 	    <div class="row row-center">
