--- a/src/main/webapp/scripts/app/application/identity/identity.html
+++ b/src/main/webapp/scripts/app/application/identity/identity.html
@@ -19,7 +19,7 @@
 		    </div>
 		</div>
 		<br>
-		<div class="row">
+		<div class="row" ng-if="nature !== 'naturalisation'">
 			<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
 			    
 				<identity-form-light ng-model="identity" with-tooltip="true"></identity-form-light>
@@ -83,7 +83,7 @@
 			    </div>
 			</div>
 		</div>
-		<div ng-if="needDocuments">
+		<div ng-if="needDocuments && nature !== 'naturalisation'">
 			<br>
 			<div class="row">
 				<div class="col-xs-1 col-xs-offset-1">
@@ -107,6 +107,26 @@
 					    <file-upload ng-model="identity.documents" doc-type="birthAct" placeholder-key="identity.form.birthAct.placeholder"></file-upload>
 					</div>
 			   	</div>
+			</div>
+		</div>
+		<div class="row" ng-if="nature === 'naturalisation'">
+			<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-5">
+				<ng-include src="'scripts/app/application/identity/identity-light-view.html'"></ng-include>
+			    <div class="form-group">
+			        <label translate="identity.form.passportNumber">PassportNumber</label> : <span>{{::identity.passportNumber}}</span>
+			    </div>
+			    <div class="form-group">
+			        <label translate="identity.form.maritalStatus">Marital status</label> : <span>{{::'sejourApp.MaritalStatus.' + identity.maritalStatus | translate}}</span>
+			    </div>
+			    <div class="form-group">
+			        <label translate="identity.form.childsNumber">ChildsNumber</label> : <span>{{::identity.childsNumber}}</span>
+			    </div>
+			    <div class="form-group">
+			        <label translate="identity.form.brothersNumber">BrothersNumber</label> : <span>{{::identity.brothersNumber}}</span>
+			    </div>
+				<div class="form-group">
+			        <label translate="identity.form.activity">Activity</label> : <span>{{::'sejourApp.ActivityType.' + identity.activity | translate}}</span>
+			    </div>
 			</div>
 		</div>
 		<br>
